--- a/app/styles/scss/modules/_colors.scss
+++ b/app/styles/scss/modules/_colors.scss
@@ -8,5 +8,34 @@ html {
 
 //**************************Navbar**************************
 .navbar {
-	background-color: mediumaquamarine;
+	transition: background-color 0.3s;
+	&--scrolling {
+		background-color: rgba(0,0,0,0.8);
+		.menu{
+			&__item {
+				color: #fff;
+			}
+		}
+	}
+}
+
+.menu {
+	&__item {
+		color: #000;
+	}
+}
+
+//**************************Header**************************
+.header {
+	color:#fff;
+	text-shadow: 3px 3px 20px #444;
+	&__arrow {
+		border-color: #fff;
+	}
+}
+
+//**************************Projects**************************
+
+.projects {
+	background-color:#ddd;
 }
