finished styling website

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -9,4 +9,5 @@
 @import 'sections/_header';
 @import 'sections/_projects';
 @import 'sections/_about';
+@import 'sections/_contact';
 @import 'sections/_footer';
