--- a/app/styles/scss/modules/_colors.scss
+++ b/app/styles/scss/modules/_colors.scss
@@ -35,14 +35,17 @@ html {
 }
 
 //**************************Projects**************************
-
 .projects {
 	background-color:#ddd;
 }
 
 //**************************About**************************
-
 .about {
 	color: #fff;
 	background-color: #15191d;
+}
+
+//**************************Contact**************************
+.contact {
+	background-color: #fff;
 }
