--- a/app/styles/scss/components/_navbar.scss
+++ b/app/styles/scss/components/_navbar.scss
@@ -10,6 +10,14 @@
 	padding:0;
 	margin:0;
 	&__item {
-		margin:0 1rem;
+		margin:0 0.5rem;
+		@media screen and (min-width: $tablet) {
+			margin:0 1rem;
+		}
+	}
+	&__link {
+		&:hover {
+			color: #ffe4c4;
+		}
 	}
 }
