--- a/app/styles/scss/modules/_base.scss
+++ b/app/styles/scss/modules/_base.scss
@@ -1,9 +1,9 @@
 //**************************Variables, mixins & placeholders********************
 %clearfix {
 	&::after {
-		content:"";
-		display:table;
-		clear:both;
+		content: "";
+		display: table;
+		clear: both;
 	}
 }
 
@@ -15,12 +15,13 @@ $arrow-size: 3rem;
 }
 
 .link {
-	display: block;
+	display: inline-block;
 	&--box {
-		&:hover {
-			opacity: 0.8;
-		}
+        display: block;
 	}
+    &:hover {
+        opacity: 0.8;
+    }
 }
 
 .underline {
@@ -29,16 +30,16 @@ $arrow-size: 3rem;
 	&::after {
 		position: absolute;
 		display: block;
-		content:"";
-		bottom:-1rem;
-		left:50%;
+		content: "";
+		bottom: -1rem;
+		left: 50%;
 		transform: translateX(-50%);
 		text-align: center;
-		width:75%;
-		border-top:2px solid;
+		width: 75%;
+		border-top: 2px solid;
 	}
 }
 
 .projects, .about, .contact {
-	padding:2rem 3rem;
+	padding: 2rem 3rem;
 }
