--- a/app/styles/scss/modules/_typography.scss
+++ b/app/styles/scss/modules/_typography.scss
@@ -1,14 +1,14 @@
 //**************************General typography**************************
 html {
-	font-size:14px;
+	font-size: 14px;
 	@media screen and (min-width:$tablet) {
-		font-size:16px;
+		font-size: 16px;
 	}
 	@media screen and (min-width:$notebook) {
-		font-size:18px;
+		font-size: 18px;
 	}
 	@media screen and (min-width:$fhd) {
-		font-size:20px;
+		font-size: 20px;
 	}
 }
 
@@ -40,7 +40,7 @@ html {
 	text-decoration: none;
 }
 
-.header, .projects, .about, .contact {
+.header, .projects, .about, .contact, .footer {
 	text-align: center;
 }
 
@@ -48,22 +48,7 @@ html {
 .menu {
 	&__item {
 		list-style: none;
-		line-height:3;
+		line-height: 3;
 		text-transform: uppercase;
 	}
-}
-
-//**************************Header**************************
-.header {
-
-}
-
-//**************************Projects**************************
-.projects {
-
-}
-
-//**************************About**************************
-.about {
-
 }
