added load articles project

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -1,3 +1,5 @@
+// compileCompressed: ../main.min.css
+
 @import 'modules/_mediaqueries';
 @import 'modules/_colors';
 @import 'modules/_typography';
